
[TestParseVariableExpression - 1]
&expressions.VariableExpressionNode{
    Variable:              "foo",
    Facts:                 (*database.Facts)(nil),
    resolvedNode:          nil,
    resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
}
---

[TestParseNumberExpression - 1]
&expressions.NumberExpressionNode{
    Value: "3.14",
    Facts: (*database.Facts)(nil),
}
---

[TestParseStringExpression - 1]
&expressions.StringExpressionNode{
    Value: "abc",
    Facts: (*database.Facts)(nil),
}
---

[TestParseFormatExpression - 1]
&expressions.FormatExpressionNode{
    String: "Hello, _!",
    Inputs: {
        &expressions.VariableExpressionNode{
            Variable:              "name",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
    },
    Facts:    (*database.Facts)(nil),
    segments: nil,
    trailing: "",
}
---

[TestParseStructureExpression - 1]
&expressions.StructureExpressionNode{
    Name:   "Foo",
    Fields: {
        {
            Name:  "a",
            Value: &expressions.VariableExpressionNode{
                Variable:              "b",
                Facts:                 (*database.Facts)(nil),
                resolvedNode:          nil,
                resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
            },
            Span: database.Span{},
        },
        {
            Name:  "c",
            Value: &expressions.VariableExpressionNode{
                Variable:              "d",
                Facts:                 (*database.Facts)(nil),
                resolvedNode:          nil,
                resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
            },
            Span: database.Span{},
        },
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseEmptyBlockExpression - 1]
&expressions.BlockExpressionNode{
    Statements: {
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseBlockExpression - 1]
&expressions.BlockExpressionNode{
    Statements: {
        &statements.ExpressionStatementNode{
            Expression: &expressions.VariableExpressionNode{
                Variable:              "foo",
                Facts:                 (*database.Facts)(nil),
                resolvedNode:          nil,
                resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
            },
            Facts: (*database.Facts)(nil),
        },
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseDoExpression - 1]
&expressions.DoExpressionNode{
    Input: &expressions.VariableExpressionNode{
        Variable:              "foo",
        Facts:                 (*database.Facts)(nil),
        resolvedNode:          nil,
        resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseSimpleIntrinsicExpression - 1]
&expressions.IntrinsicExpressionNode{
    Name:   "message",
    Inputs: {
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseComplexIntrinsicExpression - 1]
&expressions.IntrinsicExpressionNode{
    Name:   "message",
    Inputs: {
        &expressions.VariableExpressionNode{
            Variable:              "x",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
        &expressions.VariableExpressionNode{
            Variable:              "y",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseWhenExpression - 1]
&expressions.WhenExpressionNode{
    Input: &expressions.VariableExpressionNode{
        Variable:              "x",
        Facts:                 (*database.Facts)(nil),
        resolvedNode:          nil,
        resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
    },
    Arms: {
        {
            Pattern: &patterns.VariablePatternNode{
                Variable: "a",
                Facts:    (*database.Facts)(nil),
                matching: nil,
            },
            Value: &expressions.VariableExpressionNode{
                Variable:              "b",
                Facts:                 (*database.Facts)(nil),
                resolvedNode:          nil,
                resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
            },
            Span: database.Span{},
        },
        {
            Pattern: &patterns.VariablePatternNode{
                Variable: "c",
                Facts:    (*database.Facts)(nil),
                matching: nil,
            },
            Value: &expressions.VariableExpressionNode{
                Variable:              "d",
                Facts:                 (*database.Facts)(nil),
                resolvedNode:          nil,
                resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
            },
            Span: database.Span{},
        },
    },
    Facts:          (*database.Facts)(nil),
    inputTemporary: nil,
}
---

[TestParseCallExpression - 1]
&expressions.CallExpressionNode{
    Function: &expressions.VariableExpressionNode{
        Variable:              "f",
        Facts:                 (*database.Facts)(nil),
        resolvedNode:          nil,
        resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
    },
    Inputs: {
        &expressions.VariableExpressionNode{
            Variable:              "x",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
        &expressions.VariableExpressionNode{
            Variable:              "y",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
    },
    Facts:  (*database.Facts)(nil),
    isUnit: false,
}
---

[TestParseAnnotateExpression - 1]
&expressions.AnnotateExpressionNode{
    Expression: &expressions.NumberExpressionNode{
        Value: "3.14",
        Facts: (*database.Facts)(nil),
    },
    Type: &types.NamedTypeNode{
        Name:       "Number",
        Parameters: nil,
        Facts:      (*database.Facts)(nil),
    },
    Facts: (*database.Facts)(nil),
}
---

[TestParseAsExpression - 1]
&expressions.AsExpressionNode{
    Left: &expressions.VariableExpressionNode{
        Variable:              "x",
        Facts:                 (*database.Facts)(nil),
        resolvedNode:          nil,
        resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
    },
    Right: &types.NamedTypeNode{
        Name:       "T",
        Parameters: nil,
        Facts:      (*database.Facts)(nil),
    },
    Facts:      (*database.Facts)(nil),
    asFunction: nil,
}
---

[TestParseEmptyCollectionExpression - 1]
&expressions.CollectionExpressionNode{}
---

[TestParseSingleElementCollectionExpression - 1]
&expressions.CollectionExpressionNode{
    Elements: {
        &expressions.VariableExpressionNode{
            Variable:              "a",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
    },
    Facts:          (*database.Facts)(nil),
    collectionNode: nil,
}
---

[TestParseSingleLineCollectionExpression - 1]
&expressions.CollectionExpressionNode{
    Elements: {
        &expressions.VariableExpressionNode{
            Variable:              "a",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
        &expressions.VariableExpressionNode{
            Variable:              "b",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
        &expressions.VariableExpressionNode{
            Variable:              "c",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
    },
    Facts:          (*database.Facts)(nil),
    collectionNode: nil,
}
---

[TestParseMultilineCollectionExpression - 1]
&expressions.CollectionExpressionNode{
    Elements: {
        &expressions.VariableExpressionNode{
            Variable:              "a",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
        &expressions.VariableExpressionNode{
            Variable:              "b",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
        &expressions.VariableExpressionNode{
            Variable:              "c",
            Facts:                 (*database.Facts)(nil),
            resolvedNode:          nil,
            resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
        },
    },
    Facts:          (*database.Facts)(nil),
    collectionNode: nil,
}
---

[TestParseSingleInputFunctionExpression - 1]
&expressions.FunctionExpressionNode{
    Inputs: {
        &patterns.VariablePatternNode{
            Variable: "x",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
    },
    Output: &expressions.VariableExpressionNode{
        Variable:              "y",
        Facts:                 (*database.Facts)(nil),
        resolvedNode:          nil,
        resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
    },
    Facts:            (*database.Facts)(nil),
    inputTemporaries: nil,
}
---

[TestParseMultiInputFunctionExpression - 1]
&expressions.FunctionExpressionNode{
    Inputs: {
        &patterns.VariablePatternNode{
            Variable: "x",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
        &patterns.VariablePatternNode{
            Variable: "y",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
    },
    Output: &expressions.VariableExpressionNode{
        Variable:              "z",
        Facts:                 (*database.Facts)(nil),
        resolvedNode:          nil,
        resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
    },
    Facts:            (*database.Facts)(nil),
    inputTemporaries: nil,
}
---

[TestParseComplexInputFunctionExpression - 1]
&expressions.FunctionExpressionNode{
    Inputs: {
        &patterns.ConstructorPatternNode{
            ConstructorName: "X",
            Elements:        {
                &patterns.VariablePatternNode{
                    Variable: "y",
                    Facts:    (*database.Facts)(nil),
                    matching: nil,
                },
            },
            Facts:                      (*database.Facts)(nil),
            matching:                   nil,
            matchingMarkerConstructor:  (*visit.MarkerConstructorDefinition)(nil),
            matchingVariantConstructor: (*patterns.matchingVariantConstructor)(nil),
        },
    },
    Output: &expressions.VariableExpressionNode{
        Variable:              "z",
        Facts:                 (*database.Facts)(nil),
        resolvedNode:          nil,
        resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
    },
    Facts:            (*database.Facts)(nil),
    inputTemporaries: nil,
}
---

[TestParseSimpleIsExpression - 1]
&expressions.IsExpressionNode{
    Left: &expressions.VariableExpressionNode{
        Variable:              "x",
        Facts:                 (*database.Facts)(nil),
        resolvedNode:          nil,
        resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
    },
    Right: &patterns.ConstructorPatternNode{
        ConstructorName:            "None",
        Elements:                   nil,
        Facts:                      (*database.Facts)(nil),
        matching:                   nil,
        matchingMarkerConstructor:  (*visit.MarkerConstructorDefinition)(nil),
        matchingVariantConstructor: (*patterns.matchingVariantConstructor)(nil),
    },
    Facts:          (*database.Facts)(nil),
    inputTemporary: nil,
    trueVariant:    nil,
    falseVariant:   nil,
}
---

[TestParseComplexIsExpression - 1]
&expressions.IsExpressionNode{
    Left: &expressions.VariableExpressionNode{
        Variable:              "x",
        Facts:                 (*database.Facts)(nil),
        resolvedNode:          nil,
        resolvedSubstitutions: (*map[database.Node]typecheck.Type)(nil),
    },
    Right: &patterns.ConstructorPatternNode{
        ConstructorName: "Some",
        Elements:        {
            &patterns.NumberPatternNode{
                Value:    "3.14",
                Facts:    (*database.Facts)(nil),
                matching: nil,
            },
        },
        Facts:                      (*database.Facts)(nil),
        matching:                   nil,
        matchingMarkerConstructor:  (*visit.MarkerConstructorDefinition)(nil),
        matchingVariantConstructor: (*patterns.matchingVariantConstructor)(nil),
    },
    Facts:          (*database.Facts)(nil),
    inputTemporary: nil,
    trueVariant:    nil,
    falseVariant:   nil,
}
---
